# LabProject

./: CMakeLists.txt  Group-info.txt  Milestone#1 Eval - SMR25 - Team#1.xlsx  QTinv.pro  _Project Milestones and Deliverables.md  adminwindow.cpp  adminwindow.h  adminwindow.ui  classes.cpp  classes.h  globals.cpp  globals.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  managerwindow.cpp  managerwindow.h  managerwindow.ui  staffwindow.cpp  staffwindow.h  staffwindow.ui
